--- a/style.css
+++ b/style.css
@@ -1,1 +1,95 @@
-filler
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2em;
+  position: relative;
+  z-index: 1;
+}
+
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  display: flex;
+  align-items: stretch;
+  overflow: hidden;
+  
+  .stripe {
+    flex: 1;
+    background: #000;
+    transition: transform .8s ease;
+    transition-delay: 1.3s;
+    
+    &:nth-child(2) { transition-delay: 1.35s; }
+    &:nth-child(3) { transition-delay: 1.475s; }
+    &:nth-child(4) { transition-delay: 1.525s; }
+  }
+  
+  .claim {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0);
+    font-size: 1.5em;
+    color: #fff;
+    
+    span {
+      display: inline-block;
+      transform: translate3d(0, 150%, 0);
+      opacity: 0;
+      transition: transform .4s ease,
+                  opacity .4s ease;
+    
+      &:nth-child(2) { transition-delay: .4s; }
+      &:nth-child(3) { transition-delay: .8s; }
+    }
+  }
+  
+  &.loaded {
+    .stripe {
+      transform: translate3d(0, 100%, 0);
+    }
+    
+    .claim {
+      span {
+        transform: translate3d(0, 0%, 0);
+        opacity: 1;
+        animation: disappear .55s ease 1.2s forwards;
+        
+        &:nth-child(2) { animation-delay: 1.28s; }
+        &:nth-child(3) { animation-delay: 1.34s; }
+      }
+    }
+  }
+  
+  &.hidden {
+    display: none;
+  }
+}
+
+@keyframes disappear {
+  to { 
+    transform: translate3d(0, 150%, 0);
+    opacity: 0; 
+  }
+}
